crates/oxc_css_parser/tests/error/qualified-rule/unexpected-comma.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: CSS rule is expected
  ┌─ unexpected-comma.css:4:4
  │
4 │   },
  │    ^


